--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <img src="https://s3.ap-south-1.amazonaws.com/www.basava.com/aar_logo_final.png" style="max-width: 20%;">
+    <img src="https://photos.app.goo.gl/Hd3c23nt6MCgTKy7A" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
       <h2>Welcome </h2>
     <h3>This application was deployed using AWS CodeDeploy.</h3>
