--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <img src="https://photos.app.goo.gl/91hpyFZDWbuCjRZC9" style="max-width: 20%;">
+    <img src="https://image-0809.s3.us-east-2.amazonaws.com/Snapchat-934180441.jpg" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
       <h2>Welcome </h2>
     <h3>This application was deployed using AWS CodeDeploy.</h3>
